fix file menu overlap issue

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -203,7 +203,7 @@ a.header-link:hover {
   padding-right: 1px;
   width: $blockWidth;
   height: $filesHeight;
-  z-index: 100;
+  z-index: 200;
 }
 .absolute-files {
   position: absolute;
